<resources>
    <string name="app_name">Ghost Home</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="create_an_owner_s_account">create an Owner\'s Account</string>
    <string name="sign_into_your_registered_account">Sign into your registered ghost switch account</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="verify_recovery_number">Verify Recovery Number</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="otp_code_was_sent_to">OTP code was sent to</string>
    <string name="otp_expires_in">OTP expires in</string>
    <string name="i_did_not_receive_any_code">I did not receive any code</string>
    <string name="what_do_you_want_to_call_your_home">What do you want to call your home ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_08105530818">08105530818</string>
    <string name="_80_secs">80 secs</string>
    <string name="_continue">Continue</string>
    <string name="title_activity_ghost_home">GhostHomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home">Home</string>
    <string name="all_active">All Active</string>
    <string name="rooms">Rooms</string>
    <string name="pinned_devices">Pinned Devices</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="light_sockets"><![CDATA[Light & Sockets]]></string>
    <string name="ghost_home">GHOST HOME</string>
    <string name="ghost_switch">Ghost Switch</string>
    <string name="ghost_air">Ghost Air</string>
    <string name="_234">+234</string>
    <string name="living_room">Living Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="oluwadara_s_residence">Oluwadara’s Residence</string>
    <string name="smart_locks">Smart Locks</string>
    <string name="add_room">Add Room</string>
    <string name="light_1">Light 1</string>
    <string name="type">Type</string>
    <string name="save">Save</string>
    <string name="room_created">Room Created</string>
    <string name="rename_type">Rename/Type</string>
    <string name="add_light">Add Light</string>
    <string name="add_socket">Add Socket</string>
    <string name="delete_room">Delete Room</string>
    <string name="you_want_to_delete_oluwadara_s_room">You want to delete<b> Oluwadara’s room?</b></string>
    <string name="enter_security_pin_to_delete_oluwadara_s_room">Enter security Pin to Delete<b> Oluwadara’s Room</b></string>
    <string name="oluwadara_s_room_was_deleted">Oluwadara’s Room was Deleted</string>
    <string name="add_light_and_socket">Add Light and Socket</string>
    <string name="select_section_to_add_light_and_socket_from">Select section to add Light and Socket from</string>
    <string name="to_add_">To add a Light or Socket , select the available Light is your Living Room. Rename Light or Socket to identify light.</string>
    <string name="name">Name</string>
    <string name="schedule">Schedule</string>
    <string name="timer">Timer</string>
    <string name="remove_light">Remove Light</string>
    <string name="look_settings">Look Settings</string>
    <string name="lock_light">Lock Light</string>
    <string name="unlock_light">Unlock Light</string>
    <string name="schedule_light">Schedule Light</string>
    <string name="pin_light">Pin Light</string>
    <string name="unpin_light">Unpin Light</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_recovery_phone_number">Enter your recovery phone number to login</string>
    <string name="recovery_phone_number">Recovery Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="now_reset_password">Now reset password</string>
    <string name="dont_forget_it_this_time">Dont forget it this time</string>
    <string name="light_1_schedule_and_timer">Light 1 Schedule and Timer</string>
    <string name="comes_on">comes on automatically when there is power source</string>
    <string name="choose_how">Choose how long your pin should last</string>
    <string name="_24hours">24hours</string>
    <string name="_7_days">7 days</string>
    <string name="_30_days">30 days</string>
    <string name="pin">Pin</string>
    <string name="cancel">Cancel</string>
    <string name="unpin">UnPin</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="has_been_locked">has been Locked</string>
    <string name="has_been_unlocked">has been UnLocked</string>
    <string name="lock_settings">Lock Settings</string>
    <string name="disable_lock">Disable lock</string>
    <string name="set_up_lock_pin">Set up Lock Pin</string>
    <string name="change_lock_pin">Change Lock Pin</string>
    <string name="forgot_lock_pin">Forgot Lock Pin</string>
    <string name="forgot_pin">Forgot Pin</string>
    <string name="enter_your_recovery_phone">Enter your recovery phone number</string>
    <string name="otp_expires_in_180_secs">OTP expires in <font color="#2E2E2E"><b>180 secs</b></font></string>
    <string name="enter_current_4_digit_pin_for_living_room_security">Enter Current 4 digit PIN for living room security</string>

    <string-array name="scheduleList">
        <item>Never Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
</resources>