<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/rename"
        android:icon="@drawable/rename"
        android:title="@string/rename_type" />
    <item
        android:id="@+id/add_light"
        android:icon="@drawable/ic_pin"
        android:iconTint="@color/black"
        android:title="@string/pin_light" />
    <item
        android:id="@+id/add_socket"
        android:icon="@drawable/timer"
        android:iconTint="@color/black"
        android:title="@string/timer" />
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/schedule"
        android:iconTint="@color/black"
        android:title="@string/schedule_light" />
    <item
        android:id="@+id/lock_light"
        android:icon="@drawable/lock"
        android:iconTint="@color/black"
        android:title="@string/lock_light" />
    <item
        android:id="@+id/lock_setting"
        android:icon="@drawable/lock_"
        android:iconTint="@color/black"
        android:title="@string/look_settings" />
    <item

        android:id="@+id/delete"
        android:icon="@drawable/menu"
        android:title="@string/remove_light" />

</menu>