<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pinlight.PinLightFragmentDialog">

    <ViewFlipper
        android:layout_width="match_parent"
        android:id="@+id/viewFlipper"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:strokeWidth="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black2E"
                    android:paddingVertical="13dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="37dp"
                        android:fontFamily="@font/manrope_bold"
                        android:text="@string/light_1_schedule_and_timer"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="28dp"
                    android:layout_marginVertical="24dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/comes_on"
                        android:id="@+id/tvHeader"
                        android:fontFamily="@font/manrope_medium"
                        android:textSize="16sp"
                        android:textColor="@color/black2E"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_how"
                        android:fontFamily="@font/manrope_medium"
                        android:textSize="12sp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:textColor="@color/gray7674"
                        android:textAlignment="center"
                        />
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:id="@+id/radioGroup"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rbHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            style="@style/RadioButton.Login"
                            android:text="@string/_24hours"
                            android:padding="@dimen/_6sdp"
                            />
                        <RadioButton
                            android:id="@+id/rbWeek"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            style="@style/RadioButton.Login"
                            android:text="@string/_7_days"
                            android:padding="@dimen/_6sdp"
                            />
                        <RadioButton
                            android:id="@+id/rbMonth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            style="@style/RadioButton.Login"
                            android:text="@string/_30_days"
                            android:padding="@dimen/_6sdp"
                            />
                    </RadioGroup>
                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/btnCancel"
                            android:text="@string/cancel"
                            android:backgroundTint="@color/pin_line_color"
                            app:cornerRadius="6dp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/manrope_semibold"
                            />
                        <Space
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            />
                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pin"
                            android:id="@+id/btnPin"
                            app:cornerRadius="6dp"

                            android:backgroundTint="@color/button_clicked_color"
                            android:fontFamily="@font/manrope_semibold"
                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <include
            android:id="@+id/pinLayout"
            layout="@layout/pin_layout" />

    </ViewFlipper>



</FrameLayout>