<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="45dp">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/white"
                android:src="@drawable/x"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/verify_phone_number"
                android:textColor="#2E2E2E"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/otp_code_was_sent_to"
                android:textColor="#8E8E8E"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_08105530818"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/_08105530818"
                android:textColor="#2E2E2E"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_otp" />

            <ImageView
                android:id="@+id/ic_phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/phone"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_08105530818" />


            <com.chaos.view.PinView
                android:id="@+id/pinView_otp_code"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/manrope_semibold"
                android:inputType="number"
                android:textStyle="bold"
                app:itemCount="6"
                app:itemHeight="45dp"
                app:itemRadius="4dp"
                app:itemSpacing="5dp"
                app:itemWidth="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ic_phone"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_otp_expires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/otp_expires_in"
                android:textColor="#8E8E8E"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.474"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pinView_otp_code" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semibold"
                android:layout_marginTop="25dp"
                android:text="@string/_80_secs"
                android:textColor="#2E2E2E"
                android:textSize="12sp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/tv_otp_expires"
                app:layout_constraintTop_toBottomOf="@id/pinView_otp_code" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_receive_no_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/i_did_not_receive_any_code"
                android:textColor="#2E2E2E"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_otp_expires"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>