<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ciewFlipper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.addroom.ghostHome.dialog.AddLightDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:strokeWidth="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingVertical="13dp">
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/add_room"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnClose"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@drawable/close_wjite" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="24dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/name"
                    android:textSize="14sp" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:boxBackgroundColor="@color/light_gray_f2"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText"
                        android:layout_width="match_parent"
                        android:imeOptions="actionDone"
                        android:layout_height="wrap_content"
                        android:background="@color/light_gray_f2"
                        android:backgroundTint="@color/light_gray_f2"
                        android:hint="Light"
                        android:textColorHint="@color/menu_icon_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/manrope_bold"
                    android:text="@string/type"
                    android:textSize="14sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@color/light_gray_f2">
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownSelector="@color/light_gray_f2"
                        android:paddingVertical="1dp" />
                </LinearLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="@color/button_clicked_color"
                    android:padding="14dp"
                    android:text="@string/save"
                    android:textSize="16sp"
                    app:cornerRadius="3dp"
                    app:layout_constraintTop_toBottomOf="@id/password_layout" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <include layout="@layout/loading_layout"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/layoutDone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:strokeWidth="0dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="92dp"
            android:layout_marginVertical="42dp"

            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check" />

            <TextView
                android:id="@+id/tvDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/manrope_semibold"
                android:text="@string/room_created"
                android:textColor="@color/green"
                android:textSize="16sp" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ViewFlipper>