<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".unpinlight.UnPinnedLightFragmentDialog">

   <ViewFlipper
       android:layout_width="match_parent"
       android:id="@+id/viewFlipper"
       android:layout_height="wrap_content">

       <com.google.android.material.card.MaterialCardView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="54dp"
           app:cardBackgroundColor="@color/white"
           app:strokeWidth="0dp">

           <LinearLayout
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:gravity="center"
               android:layout_marginHorizontal="@dimen/_24sdp"
               android:layout_marginVertical="@dimen/_16sdp"
               android:layout_height="wrap_content">



                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/tvTitle"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/manrope_semibold"
                       android:letterSpacing="0.03"
                       android:text="@string/unpin"
                       android:textAlignment="center"
                       android:textColor="@color/black"
                       android:textSize="16sp" />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/tvSubTitle"
                       android:layout_marginTop="@dimen/_8sdp"
                       android:layout_height="wrap_content"
                       android:fontFamily="@font/manrope_medium"
                       android:letterSpacing="0.03"
                       android:layout_marginHorizontal="@dimen/_10sdp"
                       android:text="you are removing Light 1 from pinned devices"
                       android:textAlignment="center"
                       android:paddingBottom="@dimen/_6sdp"
                       android:textColor="@color/gray7674"
                       android:textSize="16sp" />
               <LinearLayout
                   android:layout_marginTop="30dp"
                   android:layout_width="match_parent"

                   android:layout_height="wrap_content">
                   <com.google.android.material.button.MaterialButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/btnNo"
                       android:text="@string/no"
                       android:backgroundTint="@color/pin_line_color"
                       app:cornerRadius="6dp"
                       android:textColor="@color/black"
                       android:fontFamily="@font/manrope_semibold"
                       />
                   <Space
                       android:layout_width="0dp"
                       android:layout_height="0dp"
                       android:layout_weight="1"
                       />
                   <com.google.android.material.button.MaterialButton
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/yes"
                       android:id="@+id/btnYes"
                       app:cornerRadius="6dp"

                       android:backgroundTint="@color/button_clicked_color"
                       android:fontFamily="@font/manrope_semibold"
                       />
               </LinearLayout>





           </LinearLayout>




       </com.google.android.material.card.MaterialCardView>

       <include
           android:id="@+id/pinLayout"
           layout="@layout/pin_layout" />
   </ViewFlipper>

</FrameLayout>